_sass/_archive.scss
/* ==========================================================================
  ARCHIVE
  ========================================================================== */

  .archive {
    margin-bottom: 2em;
    /*
     @include breakpoint($medium) {
       @include span(12 of 12);
     }
    
     @include breakpoint($large) {
       @include span(10 of 12 last);
       @include prefix(0.5 of 12);
     }
    */
    @include breakpoint($medium) {
    float: right;
    width: calc(100% - #{$right-sidebar-width-narrow});
    padding-right: $right-sidebar-width-narrow;
    }
    
    @include breakpoint($large) {
    float: right;
    width: calc(100% - #{$right-sidebar-width-narrow});
    padding-right: $right-sidebar-width-narrow;
    }
    
    @include breakpoint($x-large) {
    width: calc(100% - #{$right-sidebar-width});
    padding-right: $right-sidebar-width;
    }
    
    a {
    text-decoration: underline;
    
    &:hover {
    text-decoration: underline;
    
    img {
    box-shadow: 0 0 10px rgba(#000, 0.25);
    }
    }
    }
    }
    
    .archive__subtitle {
    margin: 1.414em 0 0;
    padding-bottom: 0.5em;
    font-size: $type-size-5;
    color: mix(#fff, $gray, 25%);
    border-bottom: 1px solid $border-color;
    
    + .list__item .archive__item-title {
    margin-top: 0.5em;
    }
    }
    
    .archive__item-title {
    margin-bottom: 0.25em;
    font-family: $sans-serif-narrow;
    
    a + a {
    opacity: 0.5;
    }
    }
    
    /* remove border*/
    .page__content {
    
    .archive__item-title {
    margin-top: 1em;
    border-bottom: none;
    }
    }
    
    .archive__item-excerpt {
    margin-top: 0;
    font-size: $type-size-6;
    
    & + p {
    text-indent: 0;
    }
    }
    
    .archive__item-date {
    margin-top: 0;
    margin-bottom: 0.25em;
    font-size: $type-size-6;
    
    & + p {
    text-indent: 0;
    }
    }
    
    .archive__item-teaser {
    border-radius: $border-radius;
    overflow: hidden;
    img {
    width: 100%;
    }
    }
    
    .archive__item:hover {
    .archive__item-teaser {
    box-shadow: 0 0 10px rgba(#000, 0.25);
    }
    
    .archive__item-title {
    text-decoration: underline;
    }
    }
    
    
    /*
      List view
      ========================================================================== */
    
    .list__item {
      /*
     @include breakpoint($medium) {
       padding-right: $right-sidebar-width-narrow;
     }
    
     @include breakpoint($large) {
        padding-right: $right-sidebar-width;
        // padding-right: $right-sidebar-width;
        padding-right: $right-sidebar-width-narrow;
     }
    
     @include breakpoint($x-large) {
        padding-right: $right-sidebar-width-wide;
        // padding-right: $right-sidebar-width-wide;
        padding-right: $right-sidebar-width-narrow;
     }
      */
    
    .page__meta {
    margin: 0 0 4px;
    }
    }
    
    
    /*
      Grid view
      ========================================================================== */
    
    .grid__item {
    margin-bottom: 2em;
    
    .page__meta {
    margin: 0 0 4px;
    }
    
    .archive__item-title {
    margin-top: 0.5em;
    font-size: $type-size-5;
    }
    
    .archive__item-excerpt {
    display: none;
    }
    
    @include breakpoint($small) {
    @include gallery(5 of 10);
    .archive__item-teaser {
    max-height: 200px;
    }
    }
    
    @include breakpoint($medium) {
    margin-left: 0; /* reset before mixin does its thing*/
    margin-right: 0; /* reset before mixin does its thing*/
    @include gallery(2.5 of 10);
    
    .archive__item-teaser {
    max-height: 120px;
    }
    
    .archive__item-excerpt {
    display: block;
    font-size: $type-size-6;
    }
    }
    }
    
    
    /*
      Features
      ========================================================================== */
    
    .feature__wrapper {
    @include clearfix();
    margin-bottom: 2em;
    border-bottom: 1px solid $border-color;
    }
    
    .feature__wrapper--noborder {
    @include clearfix();
    margin-bottom: 2em;
    }
    
    .feature__item {
    margin-bottom: 2em;
    font-size: 1.25rem;
    
    @include breakpoint($small) {
    margin-bottom: 0;
    @include gallery(4 of 12);
    
    .feature__item-teaser {
    max-height: 200px;
    overflow: hidden;
    }
    }
    
    &--left {
    @include full();
    font-size: 1.25rem;
    
    .archive__item-teaser {
    margin-bottom: 2em;
    }
    
    @include breakpoint($small) {
    .archive__item-teaser {
    @include span(5 of 12);
    }
    
    .archive__item-body {
    @include span(7 of 12 last);
    @include prefix(0.5 of 12);
    @include suffix(1 of 12);
    }
    }
    }
    
    &--right {
    @include full();
    font-size: 1.25rem;
    
    .archive__item-teaser {
    margin-bottom: 2em;
    }
    
    @include breakpoint($small) {
    text-align: right;
    
    .archive__item-teaser {
    @include span(5 of 12 rtl);
    }
    
    .archive__item-body {
    @include span(7 of 12 last rtl);
    @include prefix(0.5 of 12);
    @include suffix(1 of 12);
    }
    }
    }
    
    &--center {
    @include full();
    font-size: 1.25rem;
    
    .archive__item-teaser {
    margin-bottom: 2em;
    }
    
    @include breakpoint($small) {
    text-align: center;
    
    .archive__item-teaser {
    margin: 0 auto;
    width: span(5 of 12);
    }
    
    .archive__item-body {
    margin: 0 auto;
    width: span(7 of 12);
    }
    }
    }
    }
    
    
 /*
   Mini Features
   ========================================================================== */
  
   .minifeature__wrapper {
    @include clearfix();
    margin-bottom: 0.25em;
  }
  
  .minifeature__item {
    margin-bottom: 2em;
    font-size: 1.25rem;
  
    @include breakpoint($xsmall) {
      margin-bottom: 0;
      @include gallery(4 of 12);
  
      .minifeature__item-teaser {
        max-height: 200px;
        overflow: hidden;
      }
    }
  
    &--left {
      @include full();
      font-size: 1.25rem;
  
      .archive__item-teaser {
        margin-bottom: 2em;
      }
  
      @include breakpoint($xsmall) {
  
        .archive__item-teaser {
          @include span(1.5 of 12);
        }
  
        .archive__item-title {
          margin-top: 0;
          margin-bottom: 0.5em;
          border-bottom: none;
        }
  
        .archive__item-body {
          @include span(9 at 1);
          @include prefix(0.2 of 12);
          @include suffix(0.2 of 12);
        }

        .archive__item-subtitle {
          margin-bottom: 0.5em;
          font-size: $type-size-6;

          & + p {
            text-indent: 0;
          }
        }

        .archive__item-datebox {
          @include span(1.5 of 12 last);
        }

        .archive__item-date {
          word-break: break-normal;
          text-align: right;
          margin-top: 0;
          border-bottom: none;
        }


      }
    }
  
    &--right {
      @include full();
      font-size: 1.25rem;
  
      .archive__item-teaser {
        margin-bottom: 2em;
      }
  
      @include breakpoint($small) {
        text-align: right;
  
        .archive__item-teaser {
          @include span(5 of 12 rtl);
        }
  
        .archive__item-body {
          @include span(7 of 12 last rtl);
          @include prefix(0.5 of 12);
          @include suffix(1 of 12);
        }
      }
    }
  
    &--center {
      @include full();
      font-size: 1.25rem;
  
      .archive__item-teaser {
        margin-bottom: 2em;
      }
  
      @include breakpoint($small) {
        text-align: center;
  
        .archive__item-teaser {
          margin: 0 auto;
          width: span(5 of 12);
        }
  
        .archive__item-body {
          margin: 0 auto;
          width: span(7 of 12);
        }
      }
    }
  }

